<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">
	  
	
	<TextView 
		android:id="@+id/viewGeneralNameText" 
		android:layout_height="wrap_content"
		android:text="@string/viewGeneralNameText"
		android:padding="5dp"
		android:layout_width="fill_parent"
		android:gravity="center"
		 android:textSize="18sp" android:textColor="#FFFFFF"/>
		
	<TextView 
		android:id="@+id/viewGeneralTotalTimeText" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/viewGeneralTotalTimeText"
		android:padding="5dp"/>
				
	<TextView 
		android:id="@+id/viewGeneralTasksCompletedText" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/viewGeneralTasksCompletedText"
		android:padding="5dp"/>

		
	<TextView 
		android:id="@+id/viewGeneralTimeConsumingText" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="5dp" android:text="@string/viewGeneralTimeConsumingText"/>
		
	<TextView 
		android:id="@+id/viewGeneralTimeConsumingCategoryText" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/viewGeneralTimeConsumingCategoryText"
		android:padding="5dp"/>
		
</LinearLayout>
