<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">
	  
	<TextView
		android:id="@+id/viewItemTaskNameText" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="25sp" android:textColor="#FFFFFF" android:textSize="28sp" android:paddingBottom="15px"/>
	<TextView 
		android:id="@+id/viewItemTaskCategoryText" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/viewItemCategoryText"/>
		
	<Chronometer
		android:text="@+id/viewItemTimer"
		android:id="@+id/viewItemTimer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center" android:textSize="40dp"/>
		
	<LinearLayout 
		android:id="@+id/viewItemButtonLayout"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		android:layout_gravity="center"
		android:gravity="center"
		android:paddingBottom="10dip">
	
		<Button
			android:text="@string/viewItemStartButton"
			android:id="@+id/viewItemStartButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"/>
		<Button
			android:text="@string/viewItemStopButton"
			android:id="@+id/viewItemStopButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="gone"/>
		<Button
			android:text="@string/viewItemResumeButton"
			android:id="@+id/viewItemResumeButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="gone"/>
		
		<Button		
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/viewItemPauseButton"
			android:text="@string/viewItemPauseButton"
			android:clickable="false"/>
	

</LinearLayout>
	<TextView 
		android:id="@+id/viewItemTotalTimeText" 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/viewItemTotalTimeText"
		android:padding="5dip"/>

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/viewItemEstimatedTimeText" android:padding="5dip"></TextView>
</LinearLayout>
